Krishna | #0000 | Fixed the add more button alignment in the implementer interface form

--- a/styles/bahmniAppsFormBuilder/_form.scss
+++ b/styles/bahmniAppsFormBuilder/_form.scss
@@ -40,6 +40,9 @@
         &.form-builder-label{
           margin-top:-4px;
         }
+        &[type = "date"], &[type = "time"] {
+          float: left;
+        }
       }
       .form-builder-valid-range {
         color: $gray600;
